--- a/src/login.html
+++ b/src/login.html
@@ -123,7 +123,7 @@
             empty_timeout: 60 * 60 * 2,
             metadata: {
                 room_title: 'Demo room',
-                welcome_message: 'Welcome to plugNmeet!<br /> To share microphone click mic icon from bottom left side.',
+                welcome_message: '',
                 //webhook_url: "http://example.com",
                 //logout_url: "http://example.com",
                 room_features: {
